# attain

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
scripts/: generate_sentence.py
src/attain/: __init__.py  markov.py  matrix.py
tests/: test_markov.py  test_matrix.py
